@@ -1,280 +1,224 @@
 package com.example.book_n_go.controller;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-import java.sql.Time;
-import java.util.List;
-import java.util.Optional;
+import com.example.book_n_go.model.*;
+import com.example.book_n_go.enums.Day;
+import com.example.book_n_go.repository.WorkdayRepo;
+import com.example.book_n_go.repository.WorkspaceRepo;
+import com.example.book_n_go.service.AuthService;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
 
-import com.example.book_n_go.config.TestConfig;
-import com.example.book_n_go.enums.Day;
-import com.example.book_n_go.enums.Role;
-import com.example.book_n_go.model.Location;
-import com.example.book_n_go.model.User;
-import com.example.book_n_go.model.Workday;
-import com.example.book_n_go.model.Workspace;
-import com.example.book_n_go.repository.WorkdayRepo;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import java.sql.Time;
+import java.util.*;
 
-@WebMvcTest(WorkdayController.class)
-@Import(TestConfig.class)
-@AutoConfigureMockMvc(addFilters = false)
-public class WorkdayControllerTest {
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.Mockito.*;
 
-	@Autowired
-	private MockMvc mockMvc;
+class WorkdayControllerTest {
 
-	@MockBean
+	@InjectMocks
+	private WorkdayController workdayController;
+
+	@Mock
 	private WorkdayRepo workdayRepo;
-	private Workspace workspace;
-	private User user;
-	private Location location;
 
-	private Workday workday;
+	@Mock
+	private WorkspaceRepo workspaceRepo;
+
+	@Mock
+	private AuthService authService;
+
+	private Workspace workspace;
+	private User provider;
 
 	@BeforeEach
-	public void setUp() {
-		location = new Location(1L, 1, "Main St", "New York");
-		user = new User(1L, "ahmad@gmail.com", "password", "Ahmad", "0123456789", Role.ADMIN);
-		workspace = new Workspace(101, location, user, "Hamada Space", 3.0,
-				"A cozy workspace in NY, with a great view of the city. This workspace offers a comfortable and productive environment with modern amenities, high-speed internet, and a friendly community. Ideal for freelancers, remote workers");
-		workday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.SUNDAY, workspace);
+	void setUp() {
+		MockitoAnnotations.openMocks(this);
+
+		// Mock workspace and provider
+		provider = new User();
+		provider.setId(1L);
+
+		workspace = new Workspace();
+		workspace.setId(1L);
+		workspace.setProvider(provider);
+		workspace.setName("Workspace 1");
+		// Set up SecurityContext with a mock Authentication
+		Authentication authentication = mock(Authentication.class);
+		when(authentication.getPrincipal()).thenReturn(provider);
+		SecurityContext securityContext = mock(SecurityContext.class);
+		when(securityContext.getAuthentication()).thenReturn(authentication);
+		SecurityContextHolder.setContext(securityContext);
 	}
 
 	@Test
-	public void testGetAllWorkdays() throws Exception {
-		when(workdayRepo.findAll()).thenReturn(List.of(workday));
+	void testGetWorkdays_ReturnsListOfWorkdays() {
+		Workday workday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.MONDAY, workspace);
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
+		when(workdayRepo.findByWorkspace(workspace)).thenReturn(Collections.singletonList(workday));
 
-		mockMvc.perform(get("/workdays"))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$[0].startTime").value("09:00:00"))
-				.andExpect(jsonPath("$[0].endTime").value("17:00:00"));
+		ResponseEntity<List<Workday>> response = workdayController.getWorkdays(1L);
+
+		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(1, response.getBody().size());
+		assertEquals(workday, response.getBody().get(0));
 	}
 
 	@Test
-	public void testGetAllWorkdaysEmpty() throws Exception {
-		when(workdayRepo.findAll()).thenReturn(List.of());
+	void testGetWorkdays_ReturnsNoContent() {
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
+		when(workdayRepo.findByWorkspace(workspace)).thenReturn(Collections.emptyList());
 
-		mockMvc.perform(get("/workdays"))
-				.andExpect(status().isNoContent());
+		ResponseEntity<List<Workday>> response = workdayController.getWorkdays(1L);
+
+		assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
 	}
 
 	@Test
-	public void testGetAllWorkdaysInternalServerError() throws Exception {
-		doThrow(new RuntimeException("Database error")).when(workdayRepo).findAll();
+	void testGetWorkdays_InternalServerError() {
+		when(workspaceRepo.findById(1L)).thenThrow(RuntimeException.class);
 
-		mockMvc.perform(get("/workdays"))
-				.andExpect(status().isInternalServerError());
+		ResponseEntity<List<Workday>> response = workdayController.getWorkdays(1L);
+
+		assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
 	}
 
 	@Test
-	public void testGetWorkdayById() throws Exception {
+	void testGetWorkdayById_ReturnsWorkday() {
+		Workday workday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.MONDAY, workspace);
 		when(workdayRepo.findById(1L)).thenReturn(Optional.of(workday));
 
-		mockMvc.perform(get("/workdays/{id}", 1))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$.startTime").value("09:00:00"))
-				.andExpect(jsonPath("$.endTime").value("17:00:00"));
+		ResponseEntity<Workday> response = workdayController.getWorkdayById(1L);
+
+		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(workday, response.getBody());
 	}
 
 	@Test
-	public void testGetWorkdayByIdNotFound() throws Exception {
+	void testGetWorkdayById_NotFound() {
 		when(workdayRepo.findById(1L)).thenReturn(Optional.empty());
 
-		mockMvc.perform(get("/workdays/{id}", 1))
-				.andExpect(status().isNotFound());
+		ResponseEntity<Workday> response = workdayController.getWorkdayById(1L);
+
+		assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
 	}
 
 	@Test
-	public void testGetWorkdaysByWorkspaceId() throws Exception {
-		when(workdayRepo.findByWorkspaceId(101)).thenReturn(List.of(workday));
+	void testCreateWorkday_ReturnsCreatedWorkday() {
+		Workday workday = new Workday();
+		workday.setStartTime(Time.valueOf("09:00:00"));
+		workday.setEndTime(Time.valueOf("17:00:00"));
+		workday.setWeekDay(Day.TUESDAY);
 
-		mockMvc.perform(get("/workspaces/{workspaceId}/workdays", 101))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$[0].startTime").value("09:00:00"))
-				.andExpect(jsonPath("$[0].endTime").value("17:00:00"));
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
+		when(authService.getRequestUser()).thenReturn(provider);
+		when(workdayRepo.save(any(Workday.class))).thenAnswer(i -> i.getArgument(0));
+
+		ResponseEntity<Workday> response = workdayController.createWorkday(workday, 1L);
+
+		assertEquals(HttpStatus.CREATED, response.getStatusCode());
+		assertEquals(workspace, response.getBody().getWorkspace());
 	}
 
 	@Test
-	public void testGetWorkdaysByWorkspaceIdEmpty() throws Exception {
-		when(workdayRepo.findByWorkspaceId(101)).thenReturn(List.of());
+	void testCreateWorkday_Unauthorized() {
+		User otherUser = new User();
+		otherUser.setId(2L);
 
-		mockMvc.perform(get("/workspaces/{workspaceId}/workdays", 101))
-				.andExpect(status().isNoContent());
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
+		when(authService.getRequestUser()).thenReturn(otherUser);
+
+		ResponseEntity<Workday> response = workdayController.createWorkday(new Workday(), 1L);
+
+		assertEquals(HttpStatus.UNAUTHORIZED, response.getStatusCode());
 	}
 
 	@Test
-	public void testGetWorkdaysByWorkspaceIdInternalServerError() throws Exception {
-		doThrow(new RuntimeException("Database error")).when(workdayRepo).findByWorkspaceId(101);
-
-		mockMvc.perform(get("/workspaces/{workspaceId}/workdays", 101))
-				.andExpect(status().isInternalServerError());
-	}
-
-	@Test
-	public void testCreateWorkday() throws Exception {
-		when(workdayRepo.save(any(Workday.class))).thenReturn(workday);
-
-		mockMvc.perform(post("/workdays")
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(workday)))
-				.andExpect(status().isCreated())
-				.andExpect(jsonPath("$.startTime").value("09:00:00"))
-				.andExpect(jsonPath("$.endTime").value("17:00:00"));
-	}
-
-	@Test
-	public void testCreateWorkdayInternalServerError() throws Exception {
-		doThrow(new RuntimeException("Database error")).when(workdayRepo).save(any(Workday.class));
-
-		mockMvc.perform(post("/workdays")
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(workday)))
-				.andExpect(status().isInternalServerError());
-	}
-
-	@Test
-	public void testUpdateWorkday() throws Exception {
+	void testUpdateWorkday_ReturnsUpdatedWorkday() {
+		Workday workday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.MONDAY, workspace);
 		when(workdayRepo.findById(1L)).thenReturn(Optional.of(workday));
-		when(workdayRepo.save(any(Workday.class))).thenReturn(workday);
+		when(workdayRepo.save(any(Workday.class))).thenAnswer(i -> i.getArgument(0));
 
 		workday.setStartTime(Time.valueOf("10:00:00"));
-		workday.setEndTime(Time.valueOf("18:00:00"));
+		ResponseEntity<Workday> response = workdayController.updateWorkday(1L, workday);
 
-		mockMvc.perform(put("/workdays/{id}", 1)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(workday)))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$.startTime").value("10:00:00"))
-				.andExpect(jsonPath("$.endTime").value("18:00:00"));
+		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(Time.valueOf("10:00:00"), response.getBody().getStartTime());
 	}
 
 	@Test
-	public void testUpdateWorkdayNotFound() throws Exception {
+	void testUpdateWorkday_NotFound() {
 		when(workdayRepo.findById(1L)).thenReturn(Optional.empty());
 
-		mockMvc.perform(put("/workdays/{id}", 1)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(workday)))
-				.andExpect(status().isNotFound());
+		ResponseEntity<Workday> response = workdayController.updateWorkday(1L, new Workday());
+
+		assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
 	}
 
 	@Test
-	public void testUpdateWorkdayInternalServerError() throws Exception {
-		when(workdayRepo.findById(1L)).thenReturn(Optional.of(workday));
-		doThrow(new RuntimeException("Database error")).when(workdayRepo).save(any(Workday.class));
-	}
-
-	@Test
-	public void testUpdateWorkdaysByWorkspaceId() throws Exception {
-		when(workdayRepo.findByWorkspaceId(101)).thenReturn(List.of(workday));
-		when(workdayRepo.saveAll(any())).thenReturn(List.of(workday));
-
-		mockMvc.perform(put("/workspaces/{workspaceId}/workdays", 101)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(List.of(workday))))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$[0].startTime").value("09:00:00"))
-				.andExpect(jsonPath("$[0].endTime").value("17:00:00"));
-	}
-
-	@Test
-	public void testUpdateWorkdaysByWorkspaceIdUpdateAndDelete() throws Exception {
-		Workday existingWorkday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"),
-				Day.MONDAY, workspace);
-		Workday updatedWorkday = new Workday(1L, Time.valueOf("10:00:00"), Time.valueOf("18:00:00"),
-				Day.MONDAY, workspace);
-
-		when(workdayRepo.findByWorkspaceId(101L)).thenReturn(List.of(existingWorkday));
-
-		mockMvc.perform(put("/workspaces/{workspaceId}/workdays", 101L)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(List.of(updatedWorkday))))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$[0].startTime").value("10:00:00"))
-				.andExpect(jsonPath("$[0].endTime").value("18:00:00"));
-		verify(workdayRepo).findByWorkspaceId(101L);
-		verify(workdayRepo).save(argThat(workday -> (workday.getId() == updatedWorkday.getId()) &&
-				workday.getStartTime().equals(Time.valueOf("10:00:00")) &&
-				workday.getEndTime().equals(Time.valueOf("18:00:00")) &&
-				workday.getWeekDay() == Day.MONDAY));
-		verify(workdayRepo, never()).delete(existingWorkday);
-	}
-
-	@Test
-	public void testUpdateWorkdaysByWorkspaceIdAddNewWorkday() throws Exception {
-		Workday newWorkday = new Workday(2L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"),
-				Day.TUESDAY, workspace);
-
-		when(workdayRepo.findByWorkspaceId(101L)).thenReturn(List.of());
-
-		mockMvc.perform(put("/workspaces/{workspaceId}/workdays", 101L)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(List.of(newWorkday))))
-				.andExpect(status().isOk())
-				.andExpect(jsonPath("$[0].weekDay").value("TUESDAY"));
-		verify(workdayRepo).findByWorkspaceId(101L);
-		verify(workdayRepo).save(argThat(workday -> (workday.getId() == newWorkday.getId()) &&
-				workday.getStartTime().equals(Time.valueOf("09:00:00")) &&
-				workday.getEndTime().equals(Time.valueOf("17:00:00")) &&
-				workday.getWeekDay() == Day.TUESDAY));
-	}
-
-	@Test
-	public void testUpdateWorkdaysByWorkspaceIdDeleteWorkday() throws Exception {
-		Workday existingWorkday = new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"),
-				Day.MONDAY, workspace);
-
-		when(workdayRepo.findByWorkspaceId(101L)).thenReturn(List.of(existingWorkday));
-
-		mockMvc.perform(put("/workspaces/{workspaceId}/workdays", 101L)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(List.of())))
-				.andExpect(status().isOk())
-				.andExpect(content().json("[]"));
-
-		verify(workdayRepo).delete(existingWorkday);
-	}
-
-	@Test
-	public void testUpdateWorkdaysByWorkspaceIdInternalServerError() throws Exception {
-		when(workdayRepo.findByWorkspaceId(101L)).thenThrow(new RuntimeException("Database error"));
-
-		mockMvc.perform(put("/workspaces/{workspaceId}/workdays", 101L)
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(new ObjectMapper().writeValueAsString(List.of())))
-				.andExpect(status().isInternalServerError());
-
-		verify(workdayRepo, never()).save(any());
-		verify(workdayRepo, never()).delete(any());
-	}
-
-	@Test
-	public void testDeleteWorkday() throws Exception {
+	void testDeleteWorkday_ReturnsNoContent() {
 		doNothing().when(workdayRepo).deleteById(1L);
 
-		mockMvc.perform(delete("/workdays/{id}", 1))
-				.andExpect(status().isNoContent());
+		ResponseEntity<HttpStatus> response = workdayController.deleteWorkday(1L);
+
+		assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+		verify(workdayRepo, times(1)).deleteById(1L);
 	}
 
 	@Test
-	public void testDeleteWorkdayNotFound() throws Exception {
-		doThrow(new RuntimeException("Workday not found")).when(workdayRepo).deleteById(1L);
+	void testDeleteWorkday_InternalServerError() {
+		doThrow(RuntimeException.class).when(workdayRepo).deleteById(1L);
 
-		mockMvc.perform(delete("/workdays/{id}", 1))
-				.andExpect(status().isInternalServerError());
+		ResponseEntity<HttpStatus> response = workdayController.deleteWorkday(1L);
+
+		assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
 	}
+
+	@Test
+	void testUpdateWorkdays_UpdatesExistingWorkdays() {
+		List<Workday> existingWorkdays = Arrays.asList(
+				new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.MONDAY, workspace),
+				new Workday(2L, Time.valueOf("10:00:00"), Time.valueOf("18:00:00"), Day.TUESDAY, workspace));
+
+		List<Workday> updatedWorkdays = Arrays.asList(
+				new Workday(1L, Time.valueOf("08:00:00"), Time.valueOf("16:00:00"), Day.MONDAY, workspace),
+				new Workday(2L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.TUESDAY, workspace));
+
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.of(workspace));
+		when(workdayRepo.findByWorkspace(workspace)).thenReturn(existingWorkdays);
+		when(workdayRepo.save(any(Workday.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+		ResponseEntity<List<Workday>> response = workdayController.updateWorkdaysByWorkspaceId(1L, updatedWorkdays);
+
+		assertEquals(HttpStatus.OK, response.getStatusCode());
+		assertEquals(2, response.getBody().size());
+		verify(workdayRepo, times(2)).save(any(Workday.class));
+	}
+
+	@Test
+	void testUpdateWorkdays_InvalidWorkspaceId_ReturnsInternalServerError() {
+		List<Workday> updatedWorkdays = Arrays.asList(
+				new Workday(1L, Time.valueOf("09:00:00"), Time.valueOf("17:00:00"), Day.MONDAY, null),
+				new Workday(2L, Time.valueOf("10:00:00"), Time.valueOf("18:00:00"), Day.TUESDAY, null));
+
+		when(workspaceRepo.findById(1L)).thenReturn(Optional.empty());
+
+		ResponseEntity<List<Workday>> response = workdayController.updateWorkdaysByWorkspaceId(1L, updatedWorkdays);
+
+		assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+		verify(workdayRepo, never()).save(any(Workday.class));
+		verify(workdayRepo, never()).delete(any(Workday.class));
+	}
+
 }
